@@ -1,3 +1,8 @@
+2008-02-19  Jens Granseuer  <jensgr@gmx.net>
+
+	* file-transfer-dialog.c: (file_transfer_dialog_update_num_files): fix
+	small leak
+
 2008-01-25  Jens Granseuer  <jensgr@gmx.net>
 
 	* capplet-stock-icons.c: (capplet_init_stock_icons): remove code
